WIP:Added /farm/nearby api to query nearby farm locations
